--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'maven-publish'
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
-version = '1.0'
+version = '1.19.4-1.0'
 group = 'luckytnt.luckytntmod'
 archivesBaseName = 'luckytntmod-1.19.4'
 
