--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'maven-publish'
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
+
 version = '1.19.3-1.1'
 group = 'luckytnt.luckytntmod'
 archivesBaseName = 'luckytntmod-1.19.3'
@@ -81,15 +82,15 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-  	maven {
-  		url "https://sliminglibs.jfrog.io/artifactory/ltnt-libs-release/"
-  	}
+	maven {
+		url "https://jitpack.io"
+	}
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.19.3-44.1.23'
 
-    implementation fg.deobf("libs.luckytntlib:luckytntlib-1.19.3:44.1.2.10")
+    implementation fg.deobf("com.github.SlimingHD:LuckyTNTLib:1.19.3-44.1.2.10")
 }
 
 jar {
@@ -114,9 +115,6 @@ task sourceJar(type: Jar) {
 
 jar.finalizedBy('reobfJar')
 
-//publish should always depend on this, but build not
-//publish.dependsOn("reobfJar")
-
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -124,9 +122,6 @@ publishing {
         }
     }
     repositories {
-        maven{     	
-
-        }
     }
 }
 
